# Visual_Prototype_U

./: CMakeLists.txt  CMakeLists.txt.user.e188103  README.md  main.cpp  main.qml  qml.qrc  src.qrc  vedio.cpp  vedio.h
